feat: harden SEO quality signals and expand source-backed city data